# jaqex

./: .gitignore  README.md  mix.exs
.github/workflows/: release.yml
lib/: jaqex.ex
native/jaqex/: Cargo.toml  Cross.toml  README.md
native/jaqex/src/: lib.rs
priv/: t.jq  test.json
test/: jaqex_test.exs
