[package]
name = 'jaqex'
version = '0.1.1'
authors = ['Shaolang Ai']
edition = '2021'

[lib]
name = 'jaqex'
path = 'src/lib.rs'
crate-type = ['cdylib']

[dependencies]
jaq-core   = '2.0.0'
jaq-std    = '2.0.0'
jaq-json   = { version = '1.0.0', features = ['serde_json'] }
rustler    = { version = '0.35.0', features = ['serde'] }
serde_json = '1.0.133'

[features]
default = ['nif_version_2_15']
nif_version_2_15 = ['rustler/nif_version_2_15']
nif_version_2_16 = ['rustler/nif_version_2_16']
nif_version_2_17 = ['rustler/nif_version_2_17']
