[package]
name    = 'jaqex'
version = '0.1.5'
authors = ['Shaolang Ai']
edition = '2024'

[lib]
name = 'jaqex'
path = 'src/lib.rs'
crate-type = ['cdylib']

[dependencies]
jaq-core   = '3.1.0'
jaq-std    = '3.0.1'
jaq-json   = '2.0.1'
rustler    = { version = '0.38.0', features = ['serde'] }
serde_json = '1.0'

[features]
default = ['nif_version_2_15']
nif_version_2_15 = ['rustler/nif_version_2_15']
nif_version_2_16 = ['rustler/nif_version_2_16']
nif_version_2_17 = ['rustler/nif_version_2_17']
